Fix alignment and height of 911 and hotline buttons

--- a/src/components/main/MainStyles.scss
+++ b/src/components/main/MainStyles.scss
@@ -10,31 +10,48 @@ $lt-grey-color: #f5f5f7;
 $grey-color: #E6E6E8;
 $charcoal-color: #1b1b1b;
 
-.emergency-section {
+// .emergency-section {
+//   width: 55%;
+//   margin: 0 auto;
+//   margin-bottom: 30px;
+//   margin-top: 30px;
+//   display: grid;
+//   align-items: center;
+//   grid-template-columns: 1fr 4.5fr;
+//   padding: 2% 0;
+//   background-color: #fff;
+//   border: 1px solid #E6E6E8;
+//   border-radius: 3px;
+// }
+.emergency-section,
+.hotline-section {
   width: 55%;
   margin: 0 auto;
   margin-bottom: 30px;
   margin-top: 30px;
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  grid-template-columns: 1fr 4.5fr;
   padding: 2% 0;
   background-color: #fff;
   border: 1px solid #E6E6E8;
   border-radius: 3px;
 }
-
-.emergency-title {
-  margin-left: 15%;
+.emergency-title,
+.hotline-title {
+  margin-left: 5%;
   font-family: Lato;
+  font-size: 120%;
+  width: 200%;
   color: $charcoal-color;
 }
 
 .emergency-btn {
   background-color: $red-color;
-  padding: 10px;
-  width: 40%;
-  margin: 0 auto;
+  padding: 8px;
+  width: 80%;
+  margin: 0 5% 0 auto;
   border: none;
   border-radius: 3px;
   color: #fff;
@@ -47,33 +64,11 @@ $charcoal-color: #1b1b1b;
   cursor: pointer;
 }
 
-.hotline-section {
-  width: 55%;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 4.5fr;
-  padding: 2% 0;
-  background-color: #fff;
-  border: 1px solid #E6E6E8;
-  border-radius: 3px;
-}
-
-.hotline-title {
-  margin-left: 15%;
-  font-family: Lato;
-  font-size: 100%;
-  width: 200%;
-  color: $charcoal-color;
-}
-
 .hotline-btn {
   background-color: $turq-color;
   padding: 8px;
-  width: 40%;
-  margin: 0 auto;
+  width: 80%;
+  margin: 0 5% 0 auto;
   border: none;
   border-radius: 3px;
   color: #fff;
@@ -177,6 +172,7 @@ $charcoal-color: #1b1b1b;
   .emergency-btn,
   .hotline-btn {
     font-size: 100%;
+    width: 110%;
     padding: 7.5px 5px;
   }
 
